fixed layout issues, added jump to map with button

--- a/main.css
+++ b/main.css
@@ -66,7 +66,7 @@
   .weather-trails {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     background-color: rgba(243, 242, 242, 0.88);
     padding: 10px;
     border-radius: 10px;
